# rte-a-reference

./: .editorconfig  .gitignore  .golangci.yml  NOTICE.md  README.md  SECURITY.md  go.mod
.github/workflows/: ci.yml
pkg/rte/: task.go  task_test.go
python/: mypy.ini  pyproject.toml
python/rte_a_audit/: __init__.py  audit_logger.py
python/tests/: test_audit_logger.py
scripts/: dev_check.sh
terraform/examples/simple/: main.tf
terraform/rte_a_infra/: main.tf  outputs.tf  variables.tf
