[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rte-a-audit"
version = "0.1.0"
description = "Tamper-evident audit logging for RTE-A red team operations"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["rte_a_audit"]
